חיפוש והורדת שירים חדשים

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -14,6 +14,11 @@
       <a class="artists-link" href="{{ site.baseurl }}/artists" title="רשימת אמנים">
         <i class="fas fa-users"></i>
       </a>
+        <!-- New Songs Button -->
+      <a class="artists-link"  href="{{ site.baseurl }}/new-songs" title="שירים חדשים">
+        <i class="fas fa-music"></i>
+      </a>
+
     </center>
   </header>
   <!-- תנאי להצגת טופס החיפוש -->
