שיפור עיצוב מחודש

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -19,8 +19,8 @@
     <form class="search-bar" id="searchForm">
         <input type="text" class="search-input" placeholder="חפש שירים, אמנים, אלבומים..." id="searchInput" autofocus>
         <div class="search-icons">
-            <button type="button" title="חפש אמנים" aria-label="חפש אמנים" id="artistSearchButton"><i class="fas fa-user-friends"></i></button>
-            <button type="button"  title="חפש שירים חדשים" aria-label="חפש שירים חדשים" id="newSongsSearchButton"><i class="fas fa-fire"></i></button>
+            <a href="{{ site.baseurl }}/artists" title="חפש אמנים" aria-label="חפש אמנים" class="search-icon-button"><i class="fas fa-user-friends"></i></a>
+            <a  href="{{ site.baseurl }}/new-songs" title="חפש שירים חדשים" aria-label="חפש שירים חדשים" class="search-icon-button"><i class="fas fa-fire"></i></a>
         </div>
         <button type="submit" class="search-icon-button" aria-label="חפש">
           <i class="fas fa-search"></i>
