--- a/docs/assets/css/personal.css
+++ b/docs/assets/css/personal.css
@@ -883,7 +883,7 @@ p {
 
 /* Artist list page */
 .artists-list {
-  padding: 240px 20px 60px 20px;
+  padding: 20px 20px 60px 20px;
   background-color: #ECEFF1;
   max-width: 1200px;
   margin: 0 auto;
@@ -1042,6 +1042,7 @@ h4 {
     caret-color: var(--primary-color);
     height: 38.4px;
     border-radius: 20px; /*  עיגול מלא  */
+    font-family: var(--font-base); /* שימוש בגופן המערכת */
 }
 
 .search-icon-button {
@@ -1094,7 +1095,7 @@ h4 {
   align-items: center;
   margin-left: auto;
 }
-.search-icons button {
+.search-icons a { /* עיצוב קישורי האייקונים */
     background: none;
     border: none;
     color: #7E57C2;
@@ -1105,13 +1106,14 @@ h4 {
     position: relative;
     width: auto;
     height: auto;
+     padding: 5px; /* הוספת ריפוד */
 
 }
-.search-icons button:first-child {
+.search-icons a:first-child {
     margin-left: 0;
 }
 
-.search-icons button:hover {
+.search-icons a:hover {
     color: #00BCD4;
 }
 
@@ -1139,7 +1141,7 @@ h4 {
         margin-top: 5px;
         justify-content: center;
     }
-    .search-icons button{
+    .search-icons a{
         font-size: 18px;
     }
 
