--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,16 +1,21 @@
 <div class="topnav">
   <header class="ripple-header">
-    <a class="feedback-button" href="mailto:mesader.singelim@gmail.com" target="_blank" title="שלח משוב">
-      <i class="fas fa-envelope"></i>
-    </a>
-    <a class="right-item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר">
-      <img width="50" style="border-radius: 48%;" src="{{ site.baseurl }}/assets/images/NH.LOCAL.jpg" alt="הסמל של המחבר">
-    </a>
-    <center class="parent-element">
-      <h3 id="nextObject">
-        <img width="85" src="{{ site.baseurl }}/assets/images/logo.png" alt="סמל האתר"> <span class="site-title">שיר-בוט</span>
-      </h3>
-    </center>
+    <div class="header-container">
+      <div class="logo-container">
+        <h3 id="nextObject">
+          <img width="35" src="{{ site.baseurl }}/assets/images/logo.png" alt="סמל האתר">
+          <span class="site-title">שיר-בוט</span>
+        </h3>
+      </div>
+      <div class="icons-container">
+        <a class="feedback-button" href="mailto:mesader.singelim@gmail.com" target="_blank" title="שלח משוב">
+          <i class="fas fa-envelope"></i>
+        </a>
+        <a class="right-item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר">
+          <img width="30" style="border-radius: 48%;" src="{{ site.baseurl }}/assets/images/NH.LOCAL.jpg" alt="הסמל של המחבר">
+        </a>
+      </div>
+    </div>
   </header>
 </div>
 
